add  Dao to Class Client & Compte